recently made a change to this file

--- a/signup.html
+++ b/signup.html
@@ -22,15 +22,15 @@
         </header>
     
         <div class="modals-wrapper">
-              <span id="close-modal" title="close"></span>
+              <span id="close-modal" title="close"><i class="fa fa-times"></i></span>
             <div class="modal" id="signup-modal">
                 <form action="">
                     <h2>SignUp</h2>
                     <br>
                     <input type="text" name="username" placeholder="username">
                     <input type="email" name="email" placeholder="email">
-                    <input type="password" name="password" placeholder="password">
-                    <input type="password2" name="password2" placeholder="confirm password">
+                    <input type="password" name="password1" placeholder="password">
+                    <input type="password" name="password2" placeholder="confirm password">
                     <input type="submit" value="SignUp">
                 </form>    
             </div>
