--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         </header>
     
         <div class="modals-wrapper">
-              <span id="close-modal" title="close"></span>
+              <span id="close-modal" title="close"><i class="fa fa-times"></i></span>
             <div class="modal" id="login-modal">
                 <form action="">
                     <h2>Login</h2>
