--- a/index.html
+++ b/index.html
@@ -7,22 +7,54 @@
     <title>Django Password Manager</title>
     <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style100.css">
+    <script src="main.js" defer></script>
 </head>
 <body>
     
     <header>
         <nav>
-               <div class="brand"><a href=""><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Password Manager</a></div>
+               <div class="brand"><a href="">&nbsp;P.Manager </a><i class="fa fa-lock" aria-hidden="true"></i></div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Signup</a></li>
+                <li><a href="javascript:;" onclick="displayModal('signup-modal');">Signup</a></li>
+                <li><a href="javascript:;" onclick="displayModal('login-modal');">Login</a></li>
+                <li><a href="javascript:;" onclick="displayModal('password-modal');">View</a></li>
             </ul>
         </nav>
     </header>
  
+    <div class="modals-wrapper">
+        <span id="close-modal" title="close"><i class="fa fa-times"></i></span>
+        <div class="modal" id="signup-modal">
+            <form action="">
+                <h2>SignUp</h2>
+                <input type="text" name="username" placeholder="username">
+                <input type="email" name="email" placeholder="email">
+                <input type="password" name="password" placeholder="password">
+                <input type="password2" name="password2" placeholder="confirm password">
+                <input type="submit" value="SignUp">
+            </form>    
+        </div> 
 
+      <div class="modal" id="login-modal">
+          <form action="">
+              <h2>Login</h2>
+              <br>
+              <input type="text" name="username" placeholder="username">
+              <input type="email" name="email" placeholder="email">
+              <input type="password" name="password" placeholder="password">
+              <input type="submit" value="Login">
+          </form>    
+      </div>
 
+      <div class="modal" id="password-modal">
+            <h2>URL or Name</h2>
+            <img width="80" height="80" src="https://cdn.pixabay.com/photo/2016/04/13/14/27/google-chrome-1326908_1280.png" alt="">
+            <br>
+            <input type="email" name="email" placeholder="email"><i class="fas fa-copy copy" title="copy to clipboard"></i>
+            <input type="password" name="username" value="password"><i class="fas fa-copy copy" title="copy to clipboard"></i>
+  </div>  
+</div>  
 <footer>
     <a href="">Link to the project</a>
 </footer>
